# semantic-scholar-mcp-merged

./: .gitignore  LICENSE  README.md  pyproject.toml  run.py
scripts/: verify_photonics_venues.py
semantic_scholar/: bibtex.py  paper_tracker.py  server.py  tracking_hook.py  tracking_models.py
semantic_scholar/api/: __init__.py  authors.py  papers.py  photonics.py  recommendations.py  tracking.py
test/: conftest.py  test_author_consolidation.py  test_bibtex.py  test_normalize_dblp.py  test_paper_tracker.py  test_photonics_contract.py  test_photonics_live.py  test_tracking_hook.py  test_tracking_models.py  test_tracking_tools.py  test_tracking_wiring.py
